--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -33,3 +33,14 @@
     justify-content: flex-end;
     align-items: flex-end;
 }
+
+.app__menuitem-price-button {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: transparent;
+    color: white;
+    border: none;
+}
+
+
