--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@
   --color-crimson: #F5EFDB;
   --color-grey: #AAAAAA;
   --color-white: #FFFFFF;
+
+  --color-bg-1: #0C0C0C;
+  --color-bg-2: #545454
+
+
+
 }
 
 * {
